syntax = "proto3";
package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
 // For tests
option (gogoproto.testgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

import "pb/sigchain.proto";

message PorPackage {
  uint32 VoteForHeight = 1;
  bytes Owner = 2;
  bytes BlockHash = 3;
  bytes TxHash = 4;
  bytes SigHash = 5;
  SigChain SigChain = 6;
}
